--- a/package.json
+++ b/package.json
@@ -4,13 +4,28 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d"
+    
   },
   "devDependencies": {
     "vite": "^2.7.2"
   },
   "dependencies": {
     "aws-sdk": "^2.1046.0",
+    "gh-pages": "^3.2.3",
     "three": "^0.135.0"
-  }
+  },
+  "main": "dist/main.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ConnorGoodman/Sizzlin.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ConnorGoodman/Sizzlin/issues"
+  },
+  "homepage": "https://github.com/ConnorGoodman/Sizzlin#readme",
+  "description": ""
 }
